# TemplateProject

./: CMakeLists.txt  README.md
include/: Template.h
src/: Template.cpp
test/: TestTemplate.cpp  master.cpp
